# aidhwi

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
platform/web/: shell.html
src/: application.cpp  application.h  event.h  input_view.cpp  input_view.h  inspector.cpp  inspector.h  main.cpp  network_editor.cpp  network_editor.h
src/neural/: network.cpp  network.h
src/util/: csv.h  literals.h  random.h
